--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-router-private-route": "^0.0.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "toaster": "^0.1.2",
     "web-vitals": "^2.1.3"
