--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "hooks": "^0.3.2",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.1.3",
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.17.0",
     "react-router-private-route": "^0.0.3",
     "react-scripts": "^5.0.1",
+    "redirect": "^0.2.0",
     "redux-persist": "^6.0.0",
     "toaster": "^0.1.2",
     "web-vitals": "^2.1.3"
