--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "eslint-config-react-app": "^7.0.1",
     "hooks": "^0.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
@@ -18,7 +19,7 @@
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-router-private-route": "^0.0.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "redirect": "^0.2.0",
     "redux-persist": "^6.0.0",
     "toaster": "^0.1.2",
