--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "homepage": "https://keastar.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^5.0.17",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "eslint-config-react-app": "^7.0.1",
+    "framer-motion": "^10.16.4",
     "hooks": "^0.3.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
